2007-04-30  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: The tree construction stage is implemented.

	* mkhtmlparser.pl: New macros are added.

2007-04-28  Wakaba  <wakaba@suika.fam.cx>

	* ContentType.pm: A note on bug in the specification
	is removed since it's been now fixed.

	* .cvsignore: New file.

2007-04-28  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src, HTML-consume-entity.src: New files.

	* Makefile (HTML.pm): New rule.

	* mkhtmlparser.pl: New script.

2007-04-25  Wakaba  <wakaba@suika.fam.cx>

	* Makefile: New file.

2007-04-24  Wakaba  <wakaba@suika.fam.cx>

	* ContentType.pm: An error in pod is fixed.

2007-04-24  Wakaba  <wakaba@suika.fam.cx>

	* ContentType.pm: Documentation is added.

2007-04-24  Wakaba  <wakaba@suika.fam.cx>

	* ContentType.pm: New Perl module.

	* ChangeLog: New file.

