@@ -1,6 +1,6 @@
 package What::HTML;
 use strict;
-our $VERSION=do{my @r=(q$Revision: 1.3 $=~/\d+/g);sprintf "%d."."%02d" x $#r,@r};
+our $VERSION=do{my @r=(q$Revision: 1.4 $=~/\d+/g);sprintf "%d."."%02d" x $#r,@r};
 
 ## This is a very, very early version of an HTML parser.
 
@@ -247,7 +247,7 @@ sub _get_next_token ($) {
       }
   
 
-          return  ({type => 'character', data => '>'});
+          return  ({type => 'character', data => '<>'});
 
           redo A;
         } elsif ($self->{next_input_character} == 0x003F) { # ?
@@ -1525,7 +1525,8 @@ sub _get_next_token ($) {
 
         redo A;
       } else {
-        $self->{current_token}->{name} .= chr ($self->{next_input_character} - 0x0020); # DOCTYPE
+        $self->{current_token}->{name}
+          .= chr ($self->{next_input_character}); # DOCTYPE
         #$self->{current_token}->{error} = ($self->{current_token}->{name} ne 'HTML');
         ## Stay in the state
         
@@ -19455,4 +19456,4 @@ sub inner_html ($$$) {
 } # inner_html
 
 1;
-# $Date: 2007/04/30 07:41:49 $
+# $Date: 2007/04/30 09:59:35 $
