@@ -1,3 +1,11 @@
+2007-04-30  Wakaba  <wakaba@suika.fam.cx>
+
+	* .cvsignore: New file.
+
+	* Makefile: New file.
+
+	* HTML-tokenizer.t: New test.
+
 2007-04-24  Wakaba  <wakaba@suika.fam.cx>
 
 	* ContentType.t: Remove some |my|s to avoid warnings.
