@@ -1,5 +1,9 @@
 2007-04-30  Wakaba  <wakaba@suika.fam.cx>
 
+	* HTML.pm.src: Some tokenizer bugs are fixed.
+
+2007-04-30  Wakaba  <wakaba@suika.fam.cx>
+
 	* HTML.pm.src: The tree construction stage is implemented.
 
 	* mkhtmlparser.pl: New macros are added.
